--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <title>Page Title</title>
-</head>
+</head>  
 <body>
   <p>First paragraph.</p>
+   <p>This is a paragraph.</p>
 </body>
 </html>
 
